# papyri-rs

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: config.rs  lib.rs  main.rs  std.papyri
src/compiler/: base.rs  compiler.rs  context.rs  exports.rs  frame.rs  func.rs  highlight.rs  highlight_papyri.rs  html.rs  html_parse.rs  loader.rs  matcher.rs  mod.rs  module_loader.rs  names.rs  native.rs  native_gen.rs  regex_value.rs  render.rs  sequence.rs  signature.rs  tag.rs  types.rs  unique_id.rs  value.rs  value_convert.rs
src/errors/: mod.rs  module_error.rs  runtime_error.rs  sink.rs  sink_base.rs  syntax_error.rs  type_error.rs  warning.rs
src/parser/: ast.rs  base.rs  err.rs  func.rs  matcher.rs  mod.rs  parser.rs  queue.rs  tag.rs  template.rs  text.rs  token.rs  tokenizer.rs  types.rs
src/utils/: const_strs.rs  diagnostics.rs  equals.rs  mod.rs  outfiles.rs  range.rs  relpath.rs  sliceref.rs  sourcefile.rs  string_pool.rs  stringpool.rs  taginfo.rs  text.rs
tests/: attrs.rs  basic.rs  dict.rs  func.rs  list.rs  matcher.rs  native.rs  regex.rs  str.rs  tag.rs  text.rs  tokens.rs  types.rs
tests/common/: mod.rs
