[package]
name = "papyri-lang"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "Compiler for the Papyri markup language"
keywords = ["papyri", "markup", "html", "markup-language", "programming-language"]
categories = ["compilers", "command-line-utilities"]
homepage = "https://github.com/kaya3/papyri-rs"
repository = "https://github.com/kaya3/papyri-rs"
readme = "README.md"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[features]
default = ["syntect"]

[dependencies]
aho-corasick = "0.7.19"
arg = "0.3.1"
glob = "0.3.0"
htmlentity = "1.2.0"
indexmap = "1.9.1"
once_cell = "1.16.0"
regex = "1.7.0"
regex-lexer = "0.2.0"
syntect = {version = "5.0.0", optional = true, features = ["parsing"]}
