[package]
name = "papyri-lang"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Compiler for the Papyri markup language"
keywords = ["papyri", "markup", "html", "markup-language", "programming-language"]
categories = ["compilers", "command-line-utilities"]
homepage = "https://kaya3.github.io/papyri"
repository = "https://github.com/kaya3/papyri-rs"
readme = "README.md"

[[bin]]
name = "papyri"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[features]
default = ["syntect"]

[dependencies]
aho-corasick = "0.7.19"
arg = {version = "0.3.1", features = ["std"]}
deunicode = "1.3.2"
fxhash = "0.2.1"
glob = "0.3.0"
htmlentity = "1.2.0"
html5ever = "0.26.0"
indexmap = "1.9.1"
markup5ever_rcdom = "0.2.0"
nonmax = "0.5.3"
normalize-path = "0.2.0"
once_cell = "1.16.0"
regex = "1.7.0"
reqwest = {version = "0.11.18", features = ["blocking"]}
syntect = {version = "5.0.0", optional = true, default-features = false, features = ["default-syntaxes", "regex-onig"]}
walkdir = "2.3.2"
